[gd_scene load_steps=3 format=3 uid="uid://dng_complete_popup"]

[ext_resource type="Script" path="res://scripts/dungeon/popups/dungeon_complete_popup.gd" id="1_script"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 28
font_color = Color(1.0, 0.95, 0.6, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 0.9)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.6)
shadow_offset = Vector2(2, 4)

; ===========================================================================
; CompletePopup â€” dungeon run summary (gold, exp, items earned)
; Emits: {}
; ===========================================================================

[node name="CompletePopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

; --- dark overlay ---

[node name="PanelBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

; --- centered panel ---

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(360, 280)

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

; --- title ---

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Dungeon Complete!"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_title")

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- dungeon name + floors cleared ---

[node name="SummarySection" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DungeonNameLabel" type="Label" parent="CenterContainer/Panel/VBox/SummarySection"]
layout_mode = 2
text = "The Ashen Crypt"
horizontal_alignment = 1

[node name="FloorsLabel" type="Label" parent="CenterContainer/Panel/VBox/SummarySection"]
layout_mode = 2
text = "Floors Cleared: 10 / 10"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- rewards breakdown ---

[node name="RewardsSection" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RewardsHeader" type="Label" parent="CenterContainer/Panel/VBox/RewardsSection"]
layout_mode = 2
text = "Rewards"
horizontal_alignment = 1

; --- gold row ---

[node name="GoldRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox/RewardsSection"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="GoldIcon" type="TextureRect" parent="CenterContainer/Panel/VBox/RewardsSection/GoldRow"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="CenterContainer/Panel/VBox/RewardsSection/GoldRow"]
layout_mode = 2
text = "Gold Earned: +0"

; --- exp row ---

[node name="ExpRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox/RewardsSection"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="ExpIcon" type="TextureRect" parent="CenterContainer/Panel/VBox/RewardsSection/ExpRow"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
stretch_mode = 5

[node name="ExpLabel" type="Label" parent="CenterContainer/Panel/VBox/RewardsSection/ExpRow"]
layout_mode = 2
text = "Exp Earned: +0"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- items earned (scrollable grid, entries spawned at runtime) ---

[node name="ItemsSection" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ItemsHeader" type="Label" parent="CenterContainer/Panel/VBox/ItemsSection"]
layout_mode = 2
text = "Items Acquired:"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBox/ItemsSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemsGrid" type="GridContainer" parent="CenterContainer/Panel/VBox/ItemsSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- close ---

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Return to Map"
